# dnpm-kafka-rest-proxy

./: Cargo.toml  Dockerfile  README.md  dev-compose.yml
.github/workflows/: deploy.yml
src/: auth.rs  cli.rs  main.rs  routes.rs  sender.rs
