[package]
name = "dnpm-kafka-rest-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "AGPL-3.0"
description = "DNPM MTB REST Proxy für Kafka"

# Dependencies

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
axum = { version = "0.8", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.46", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
base64 = "0.22"
bcrypt = "0.17"
rdkafka = { version = "0.38.0", features = ["cmake-build", "libz-static"] }
async-trait = "0.1"
# DTOs
mv64e-mtb-dto = { git = "https://github.com/dnpm-dip/mv64e-mtb-dto-rs", branch = "master" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
mockall = "0.13"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Profiles

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
